# PlanPilot

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/ai/: clients.py  planner.py  prompts.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: goals.py  phases.py  tasks.py
backend/app/core/: config.py  cors.py
backend/app/db/: init_db.py  session.py
backend/app/models/: goal.py  phase.py  task.py
backend/app/schemas/: ai.py  goal.py  phase.py  task.py
backend/app/services/: goal_service.py  phase_service.py  task_service.py
frontend/: package-lock.json  package.json
frontend/src/lib/: full_builder_removed.svelte
frontend/src/lib/animations/: gsap.ts
frontend/src/lib/api/: goals.ts  http.ts  tasks.ts
frontend/src/lib/components/landing/: Features.svelte  FinalCta.svelte  Footer.svelte  Hero.svelte  HowItWorks.svelte  LandingPage.svelte  QuickStartForm.svelte  Stats.svelte
frontend/src/lib/components/layout/: AppShell.svelte  Background.svelte  TopNav.svelte
frontend/src/lib/components/tasks/: TaskEditor.svelte
frontend/src/lib/components/ui/: Button.svelte  Card.svelte  Field.svelte  Inputs.css  Modal.svelte
frontend/src/lib/stores/: goalCache.ts
frontend/src/lib/styles/: theme.css
frontend/src/lib/types/: models.ts
frontend/src/routes/: +layout.svelte
frontend/src/routes/goals/[id]/: +page.svelte  +page.ts
frontend/src/routes/goals/[id]/tasks/: +page.svelte  +page.ts
